--- a/GRM-Client/GestionDesRessourcesMaterielless/src/app/components/main-layout/main-layout.component.html
+++ b/GRM-Client/GestionDesRessourcesMaterielless/src/app/components/main-layout/main-layout.component.html
@@ -1,1 +1,18 @@
-<app-sidebar></app-sidebar>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div id="nav-bar">
+        <!-- Sidebar content here -->
+        <app-sidebar></app-sidebar>
+    </div>
+    <div class="dynamic-component">
+        <!-- Main content (router-outlet) here -->
+        <router-outlet></router-outlet>
+    </div>
+</body>
+</html>
