--- a/GRM-Client/GestionDesRessourcesMaterielless/src/app/components/sidebar/sidebar.component.html
+++ b/GRM-Client/GestionDesRessourcesMaterielless/src/app/components/sidebar/sidebar.component.html
@@ -9,7 +9,7 @@
     <div id="nav-bar">
         <input id="nav-toggle" type="checkbox" />
         <div id="nav-header">
-          <a id="nav-title" href="https://codepen.io" target="_blank">
+          <a id="nav-title" target="_blank">
             C#<i class="fab fa-codepen"></i>DEPEN
           </a>
           <label for="nav-toggle">
