--- a/GRM-Client/GestionDesRessourcesMaterielless/src/app/components/main-layout/main-layout.component.html
+++ b/GRM-Client/GestionDesRessourcesMaterielless/src/app/components/main-layout/main-layout.component.html
@@ -7,12 +7,11 @@
 </head>
 <body>
     <div id="nav-bar">
-        <!-- Sidebar content here -->
-        <app-sidebar></app-sidebar>
+        <app-sidebar #sidebarRef></app-sidebar>
     </div>
     <div class="dynamic-component">
-        <!-- Main content (router-outlet) here -->
         <router-outlet></router-outlet>
     </div>
+
 </body>
 </html>
