--- a/GRM-Client/GestionDesRessourcesMaterielless/src/app/components/sidebar/sidebar.component.html
+++ b/GRM-Client/GestionDesRessourcesMaterielless/src/app/components/sidebar/sidebar.component.html
@@ -12,7 +12,7 @@
           <a id="nav-title" target="_blank">
             C#<i class="fab fa-codepen"></i>DEPEN
           </a>
-          <label for="nav-toggle">
+          <label (click)="toggleSidebar()" for="nav-toggle">
             <span id="nav-toggle-burger"></span>
           </label>
           <hr />
