--- a/GRM-Client/GestionDesRessourcesMaterielless/src/app/components/main-layout/main-layout.component.scss
+++ b/GRM-Client/GestionDesRessourcesMaterielless/src/app/components/main-layout/main-layout.component.scss
@@ -5,13 +5,24 @@ body {
 }
 
 body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: red;
+  display: grid;
+  grid-template-columns: auto 1fr;
 }
 
-app-root{
-    height: 100%;
+#nav-bar {
+  display: flex;
+  flex-direction: column;
+  background: var(--navbar-dark-primary);
+  border-radius: 16px;
+  color: var(--navbar-light-primary);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  overflow: hidden;
+  user-select: none;
+}
+
+.dynamic-component{
+  width: 100%;
+  height: 100%;
+  background-color: gray;
 }
 
