--- a/GRM-Client/GestionDesRessourcesMaterielless/src/app/components/list-ressources/list-ressources.component.scss
+++ b/GRM-Client/GestionDesRessourcesMaterielless/src/app/components/list-ressources/list-ressources.component.scss
@@ -1,7 +1,10 @@
 html,
 body {
   height: 100%;
-  margin: 0px;
+  width: 100%;
+  background-color: #2c3e5022;
+  border-radius: 6px;
+
 }
 
 body {
