--- a/GRM-Client/GestionDesRessourcesMaterielless/src/app/components/main-layout/main-layout.component.html
+++ b/GRM-Client/GestionDesRessourcesMaterielless/src/app/components/main-layout/main-layout.component.html
@@ -10,8 +10,9 @@
         <app-sidebar #sidebarRef></app-sidebar>
     </div>
     <div class="dynamic-component">
-        <router-outlet></router-outlet>
+        <div class="dynamic-component-child">
+            <router-outlet></router-outlet>
+        </div>
     </div>
-
 </body>
 </html>
