--- a/GRM-Client/GestionDesRessourcesMaterielless/src/app/components/main-layout/main-layout.component.scss
+++ b/GRM-Client/GestionDesRessourcesMaterielless/src/app/components/main-layout/main-layout.component.scss
@@ -1,7 +1,6 @@
 html,
 body {
   height: 100%;
-  margin: 0px;
 }
 
 body {
@@ -12,17 +11,26 @@ body {
 #nav-bar {
   display: flex;
   flex-direction: column;
-  background: var(--navbar-dark-primary);
-  border-radius: 16px;
+  background: #69809c;
   color: var(--navbar-light-primary);
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   overflow: hidden;
   user-select: none;
+
+  border-right: rgba(0, 0, 0, 0.295) solid 2px;
+
 }
 
 .dynamic-component{
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
-  background-color: gray;
+  background: #69809c;
 }
 
+.dynamic-component-child{
+  width: 99%;
+  height: 99%;
+}
