--- a/GRM-Client/GestionDesRessourcesMaterielless/src/app/components/sidebar/sidebar.component.html
+++ b/GRM-Client/GestionDesRessourcesMaterielless/src/app/components/sidebar/sidebar.component.html
@@ -18,8 +18,8 @@
           <hr />
         </div>
         <div id="nav-content">
-          <div class="nav-button">
-            <i class="fas fa-palette"></i><span>Your Work</span>
+          <div class="nav-button" (click)="redirectToPage('/mainLayout/listeRessources')">
+            <i class="fas fa-palette"></i><span>Ressoureces</span>
           </div>
           <div class="nav-button">
             <i class="fas fa-images"></i><span>Assets</span>
