--- a/GRM-Client/GestionDesRessourcesMaterielless/src/app/components/list-ressources/list-ressources.component.scss
+++ b/GRM-Client/GestionDesRessourcesMaterielless/src/app/components/list-ressources/list-ressources.component.scss
@@ -7,7 +7,7 @@ body {
 
 }
 
-body {
+body{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -17,3 +17,9 @@ body {
   width: 100%;
   height: auto;
 }
+
+.table-container {
+  max-height: 100%;
+  overflow-y: auto; 
+}
+
