--- a/GRM-Client/GestionDesRessourcesMaterielless/src/app/components/list-ressources/list-ressources.component.html
+++ b/GRM-Client/GestionDesRessourcesMaterielless/src/app/components/list-ressources/list-ressources.component.html
@@ -6,42 +6,106 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="mat-elevation-z8">
-      <table mat-table [dataSource]="dataSource">
-        <!-- Position Column -->
-        <ng-container matColumnDef="position">
-          <th mat-header-cell *matHeaderCellDef>No.</th>
-          <td mat-cell *matCellDef="let element">{{ element.position }}</td>
-        </ng-container>
+    <mat-tab-group animationDuration="1000ms" class="tabs">
+      <mat-tab label="Ordinateurs">
+        <div class="mat-elevation-z8">
+          <table mat-table [dataSource]="ordinateurDataSource">
+            <!-- Marque Column -->
+            <ng-container matColumnDef="Marque">
+              <th mat-header-cell *matHeaderCellDef>Marque.</th>
+              <td mat-cell *matCellDef="let element">{{ element.Marque }}</td>
+            </ng-container>
 
-        <!-- Name Column -->
-        <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef>Name</th>
-          <td mat-cell *matCellDef="let element">{{ element.name }}</td>
-        </ng-container>
+            <!-- CPU Column -->
+            <ng-container matColumnDef="Cpu">
+              <th mat-header-cell *matHeaderCellDef>CPU</th>
+              <td mat-cell *matCellDef="let element">{{ element.Cpu }}</td>
+            </ng-container>
 
-        <!-- Weight Column -->
-        <ng-container matColumnDef="weight">
-          <th mat-header-cell *matHeaderCellDef>Weight</th>
-          <td mat-cell *matCellDef="let element">{{ element.weight }}</td>
-        </ng-container>
+            <!-- RAM Column -->
+            <ng-container matColumnDef="Ram">
+              <th mat-header-cell *matHeaderCellDef>RAM</th>
+              <td mat-cell *matCellDef="let element">{{ element.Ram }}</td>
+            </ng-container>
 
-        <!-- Symbol Column -->
-        <ng-container matColumnDef="symbol">
-          <th mat-header-cell *matHeaderCellDef>Symbol</th>
-          <td mat-cell *matCellDef="let element">{{ element.symbol }}</td>
-        </ng-container>
+            <!-- DisqueDur Column -->
+            <ng-container matColumnDef="DisqueDur">
+              <th mat-header-cell *matHeaderCellDef>Disque Dur</th>
+              <td mat-cell *matCellDef="let element">
+                {{ element.DisqueDur }}
+              </td>
+            </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-      </table>
+            <!-- Ecran Column -->
+            <ng-container matColumnDef="Ecran">
+              <th mat-header-cell *matHeaderCellDef>Ecran</th>
+              <td mat-cell *matCellDef="let element">{{ element.Ecran }}</td>
+            </ng-container>
 
-      <mat-paginator
-        [pageSizeOptions]="[5, 12]"
-        showFirstLastButtons
-        aria-label="Select page of periodic elements"
-      >
-      </mat-paginator>
-    </div>
+            <!-- Define header row -->
+            <tr
+              mat-header-row
+              *matHeaderRowDef="displayedOrdinateurColumns"
+            ></tr>
+            <!-- Define row -->
+            <tr
+              mat-row
+              *matRowDef="let row; columns: displayedOrdinateurColumns"
+            ></tr>
+          </table>
+
+          <mat-paginator
+            [pageSizeOptions]="[5, 10]"
+            showFirstLastButtons
+            aria-label="Select page of periodic elements"
+          >
+          </mat-paginator>
+        </div>
+      </mat-tab>
+      <mat-tab label="Imprimantes">
+        <div class="mat-elevation-z8">
+          <table mat-table [dataSource]="imprimanteDataSource">
+            <!-- Marque Column -->
+            <ng-container matColumnDef="Marque">
+              <th mat-header-cell *matHeaderCellDef>Marque</th>
+              <td mat-cell *matCellDef="let element">{{ element.Marque }}</td>
+            </ng-container>
+            <!-- Vitesse Impression Column -->
+            <ng-container matColumnDef="VitesseImpression">
+              <th mat-header-cell *matHeaderCellDef>Vitesse Impression</th>
+              <td mat-cell *matCellDef="let element">
+                {{ element.VitesseImpression }}
+              </td>
+            </ng-container>
+
+            <!-- Resolution Column -->
+            <ng-container matColumnDef="Resolution">
+              <th mat-header-cell *matHeaderCellDef>Resolution</th>
+              <td mat-cell *matCellDef="let element">
+                {{ element.Resolution }}
+              </td>
+            </ng-container>
+
+            <!-- Define header row -->
+            <tr
+              mat-header-row
+              *matHeaderRowDef="displayedImprimanteColumns"
+            ></tr>
+            <!-- Define row -->
+            <tr
+              mat-row
+              *matRowDef="let row; columns: displayedImprimanteColumns"
+            ></tr>
+          </table>
+
+          <mat-paginator
+            [pageSizeOptions]="[5, 10]"
+            showFirstLastButtons
+            aria-label="Select page of periodic elements"
+          >
+          </mat-paginator>
+        </div>
+      </mat-tab>
+    </mat-tab-group>
   </body>
 </html>
