--- a/GRM-Client/GestionDesRessourcesMaterielless/src/app/components/sidebar/sidebar.component.html
+++ b/GRM-Client/GestionDesRessourcesMaterielless/src/app/components/sidebar/sidebar.component.html
@@ -53,7 +53,7 @@
               <img src="https://gravatar.com/avatar/4474ca42d303761c2901fa819c4f2547" />
             </div>
             <div id="nav-footer-titlebox">
-              <a id="nav-footer-title" href="https://codepen.io/uahnbu/pens/public" target="_blank">uahnbu</a>
+              <a id="nav-footer-title" href="https://codepen.io/uahnbu/pens/public" target="_blank">{{currentUser.name}}</a>
               <span id="nav-footer-subtitle">Admin</span>
             </div>
             <label for="nav-footer-toggle"><i class="fas fa-caret-up"></i></label>
