--- a/GRM-Client/GestionDesRessourcesMaterielless/src/app/components/sidebar/sidebar.component.html
+++ b/GRM-Client/GestionDesRessourcesMaterielless/src/app/components/sidebar/sidebar.component.html
@@ -17,34 +17,10 @@
           </label>
           <hr />
         </div>
-        <div id="nav-content">
-          <div class="nav-button" (click)="redirectToPage('/mainLayout/listeRessources')">
-            <i class="fas fa-palette"></i><span>Ressoureces</span>
+        <div id="nav-content" *ngIf="sidebarContent.length > 0">
+          <div class="nav-button" *ngFor="let item of sidebarContent" (click)="redirectToPage(item.url)">
+            <i class="fas fa-palette"></i><span>{{ item.name }}</span>
           </div>
-          <div class="nav-button">
-            <i class="fas fa-images"></i><span>Assets</span>
-          </div>
-          <div class="nav-button">
-            <i class="fas fa-thumbtack"></i><span>Pinned Items</span>
-          </div>
-          <hr />
-          <div class="nav-button">
-            <i class="fas fa-heart"></i><span>Following</span>
-          </div>
-          <div class="nav-button">
-            <i class="fas fa-chart-line"></i><span>Trending</span>
-          </div>
-          <div class="nav-button">
-            <i class="fas fa-fire"></i><span>Challenges</span>
-          </div>
-          <div class="nav-button">
-            <i class="fas fa-magic"></i><span>Spark</span>
-          </div>
-          <hr />
-          <div class="nav-button">
-            <i class="fas fa-gem"></i><span>Codepen Pro</span>
-          </div>
-          <div id="nav-content-highlight"></div>
         </div>
         <input id="nav-footer-toggle" type="checkbox" />
         <div id="nav-footer">
