accepted-fournisseur-offre/ component

--- a/GRM-Client/GestionDesRessourcesMaterielless/src/app/components/accepted-fournisseur-offre/accepted-fournisseur-offre.component.html
+++ b/GRM-Client/GestionDesRessourcesMaterielless/src/app/components/accepted-fournisseur-offre/accepted-fournisseur-offre.component.html
@@ -136,14 +136,14 @@
               <button
                 mat-raised-button
                 #tooltip="matTooltip"
-                matTooltip="Envoyer votre Offre"
+                matTooltip="Submit Your Offer"
                 [matTooltipPosition]="position.value!"
                 matTooltipHideDelay="0"
                 aria-label="Button that displays a tooltip that hides when scrolled out of the container"
                 class="example-button"
                 (click)="createRessource(appelOffre.appelOffreID)"
               >
-                Appel Offre
+                Submit
               </button>
             </div>
           </mat-expansion-panel>
