--- a/GRM-Client/GestionDesRessourcesMaterielless/src/app/components/sidebar/sidebar.component.html
+++ b/GRM-Client/GestionDesRessourcesMaterielless/src/app/components/sidebar/sidebar.component.html
@@ -21,6 +21,18 @@
           <div class="nav-button" *ngFor="let item of sidebarContent" (click)="redirectToPage(item.url)">
             <i class="fas fa-palette"></i><span>{{ item.name }}</span>
           </div>
+          <button
+          mat-raised-button
+          #tooltip="matTooltip"
+          matTooltip="Log out"
+          matTooltipHideDelay="0"
+          aria-label="Button that displays a tooltip that hides when scrolled out of the container"
+          class="example-button"
+          style="margin-right: 6px;"
+          (click)="logout()"
+        >
+          Log out
+        </button>
         </div>
         <input id="nav-footer-toggle" type="checkbox" />
         <div id="nav-footer">
